# putki

./: Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  mkdocs.yml  putki.ABOUT  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256
docs/: SUMMARY.md  api.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  indirect-package-names.yml  mkdocs.yml  monthly-downloads.json  packaging-facts.json  yearly-commits.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
example/basic/: tasks.json  tasks.yaml
example/basic/tasks/: tasks.yaml
example/cross-over/: tasks.yml
example/minimal-tree/tasks/: tasks.yaml
example/minimal-tree/tasks/wun/: tasks.yaml
example/s/: meta-base.yml  misleading-misplaced-bind.txt  structures.yml
example/s/c/x/: structures.yml
example/s/c/x/d/: meta.yml  structure.yml
example/s/c/x/r/: meta.yml  structure.yml
example/s/c/y/: structures.yml
example/s/c/y/d/: meta.yml  structure.yml
example/s/c/y/r/: structure.yml
putki/: __init__.py  __main__.py  api.py  cli.py  discover.py  things.py  traverse.py
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
schema/1/: tasks.json
schema/1/tasks/: index.json  index.yml
test/: test_discover.py  test_traverse.py
test/fixtures/: log-rotation.yml  task.yml
